// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    accessible={true}
    focusable={false}
    isTVSelectable={true}
    style={
      Object {
        "opacity": 1,
      }
    }
    testID="assessment-button"
  >
    <View
      style={
        Array [
          Object {
            "borderRadius": 10,
            "paddingHorizontal": 14,
            "paddingVertical": 22,
          },
          Object {
            "backgroundColor": "#6979f8",
          },
        ]
      }
    >
      <Text
        style={
          Object {
            "color": "#ffffff",
            "fontFamily": "IBMPlexSans",
            "fontSize": 18,
            "fontWeight": "normal",
            "lineHeight": 24,
            "textAlign": "center",
            "writingDirection": "ltr",
          }
        }
        use="body1"
      >
        Next
      </Text>
    </View>
  </View>
</View>
`;

exports[`color 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    accessible={true}
    focusable={false}
    isTVSelectable={true}
    style={
      Object {
        "opacity": 1,
      }
    }
    testID="assessment-button"
  >
    <View
      style={
        Array [
          Object {
            "borderRadius": 10,
            "paddingHorizontal": 14,
            "paddingVertical": 22,
          },
          Object {
            "backgroundColor": "red",
          },
        ]
      }
    >
      <Text
        style={
          Object {
            "color": "red",
            "fontFamily": "IBMPlexSans",
            "fontSize": 18,
            "fontWeight": "normal",
            "lineHeight": 24,
            "textAlign": "center",
            "writingDirection": "ltr",
          }
        }
        use="body1"
      >
        Next
      </Text>
    </View>
  </View>
</View>
`;

exports[`disabled 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    accessible={true}
    focusable={false}
    isTVSelectable={true}
    style={
      Object {
        "opacity": 1,
      }
    }
    testID="assessment-button"
  >
    <View
      style={
        Array [
          Object {
            "borderRadius": 10,
            "paddingHorizontal": 14,
            "paddingVertical": 22,
          },
          Object {
            "backgroundColor": "#e5e7fa",
          },
        ]
      }
    >
      <Text
        style={
          Object {
            "color": "#a5affb",
            "fontFamily": "IBMPlexSans",
            "fontSize": 18,
            "fontWeight": "normal",
            "lineHeight": 24,
            "textAlign": "center",
            "writingDirection": "ltr",
          }
        }
        use="body1"
      >
        Next
      </Text>
    </View>
  </View>
</View>
`;
